[build-system]
requires = ["setuptools>74.1", "wheel", "cython>=3.1.0"]

[project.optional-dependencies]
dev = ["tox", "pytest"]

[tool.setuptools]
ext-modules = [
  {name = "http_parser.parser", sources = ["http_parser/parser.pyx", "http_parser/http_parser.c"]}
]

[tool.setuptools.packages.find]
exclude = ["testing"]

[tool.setuptools.dynamic]
version = {attr = "http_parser.__version__"} 

[project]
name = "http-parser"
authors = [
    {name = "Benoit Chesneau", email = "benoitc@e-engura.com"},
]
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Other Environment',
    'Intended Audience :: Developers',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Internet',
    'Topic :: Utilities',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]

